--- a/Mandatory01/public/assets/css/sign-up-login.css
+++ b/Mandatory01/public/assets/css/sign-up-login.css
@@ -3,7 +3,7 @@ body {
     font-family:'Courier New', Courier, monospace;
 }
 
-#login-container {
+#sign-up-login-container {
     background-color: white;
     border-radius: 25px;
     top: 50%;
@@ -16,16 +16,16 @@ body {
     padding: 20px;
 }
 
-#login-container h1 {
+#sign-up-login-container h1 {
     margin-top: 15px;
     text-align: center;
 }
 
-#login-container p {
+#sign-up-login-container p {
     text-align: center;
 }
 
-#login-button-div {
+#sign-up-login-button-div {
     display: flex;
     justify-content: center;
 }
@@ -53,4 +53,9 @@ a:hover {
     text-decoration: underline;
     background-color: transparent;
     font-weight: bold;
+}
+
+.form-control:focus {
+    border-color: grey;
+    box-shadow: inset 1px 1px rgb(61, 61, 61), 0 0 8px rgb(98, 98, 98);
 }
