--- a/Mandatory01/public/components/navbar/navbar.html
+++ b/Mandatory01/public/components/navbar/navbar.html
@@ -50,6 +50,7 @@
                 <li><a class="dropdown-item" href="/fourth-class">Fourth Class: 24/02/2023</a></li>
                 <li><a class="dropdown-item" href="/fifth-class">Fifth Class: 03/03/2023</a></li>
                 <li><a class="dropdown-item" href="/sixth-class">Sixth Class: 10/03/2023</a></li>
+                <li><a class="dropdown-item" href="/seventh-class">Seventh Class: 17/03/2023</a></li>
               </ul>
             </li>
           </ul>
