--- a/Mandatory02/client/src/app.css
+++ b/Mandatory02/client/src/app.css
@@ -47,6 +47,27 @@ h1 {
   transform: translate(-50%, -50%);
 }
 
+.login-signup-form {
+    background-color: #242424;
+    border-color:#646cff;
+    border-width: 5px;
+    border-style: solid;
+    border-radius: 25px;
+    top: 50%;
+    left: 50%;
+    width: 30em;
+    height: 27em;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    padding: 20px;
+    text-align: center;
+}
+
+.field {
+  font-size: 20px;
+  padding-top: 10px;
+}
+
 .nav-bar {
   margin: 10px;
   font-size: 20px;
