--- a/Mandatory02/client/src/app.css
+++ b/Mandatory02/client/src/app.css
@@ -56,7 +56,23 @@ h1 {
     top: 50%;
     left: 50%;
     width: 30em;
-    height: 27em;
+    height: 25em;
+    transform: translate(-50%, -50%);
+    position: fixed;
+    padding: 20px;
+    text-align: center;
+}
+
+.contact-us-form {
+  background-color: #242424;
+    border-color:#646cff;
+    border-width: 5px;
+    border-style: solid;
+    border-radius: 25px;
+    top: 50%;
+    left: 50%;
+    width: 30em;
+    height: 32em;
     transform: translate(-50%, -50%);
     position: fixed;
     padding: 20px;
